CMAKE_MINIMUM_REQUIRED(VERSION 3.3)
MESSAGE(STATUS "--- Configuring targets ---")
MESSAGE(STATUS "")

SET(LIB_HOUTEST_SOURCE_DIR ${HOU_SOURCE_DIR}/houtest)
SET(LIB_HOUTEST_INCLUDE_DIR ${LIB_HOUTEST_SOURCE_DIR}/include)

SET(LIB_HOUCOR houcor)
SET(LIB_HOUCOR_SOURCE_DIR ${HOU_SOURCE_DIR}/houcor)
SET(LIB_HOUCOR_INCLUDE_DIR ${LIB_HOUCOR_SOURCE_DIR}/include)
ADD_SUBDIRECTORY(${LIB_HOUCOR_SOURCE_DIR})

SET(LIB_HOUMTH houmth)
SET(LIB_HOUMTH_SOURCE_DIR ${HOU_SOURCE_DIR}/houmth)
SET(LIB_HOUMTH_INCLUDE_DIR ${LIB_HOUMTH_SOURCE_DIR}/include)
ADD_SUBDIRECTORY(${LIB_HOUMTH_SOURCE_DIR})

SET(LIB_HOUSYS housys)
SET(LIB_HOUSYS_SOURCE_DIR ${HOU_SOURCE_DIR}/housys)
SET(LIB_HOUSYS_INCLUDE_DIR ${LIB_HOUSYS_SOURCE_DIR}/include)
ADD_SUBDIRECTORY(${LIB_HOUSYS_SOURCE_DIR})

SET(LIB_HOUGL hougl)
SET(LIB_HOUGL_SOURCE_DIR ${HOU_SOURCE_DIR}/hougl)
SET(LIB_HOUGL_INCLUDE_DIR ${LIB_HOUGL_SOURCE_DIR}/include)
ADD_SUBDIRECTORY(${LIB_HOUGL_SOURCE_DIR})

SET(LIB_HOUGFX hougfx)
SET(LIB_HOUGFX_SOURCE_DIR ${HOU_SOURCE_DIR}/hougfx)
SET(LIB_HOUGFX_INCLUDE_DIR ${LIB_HOUGFX_SOURCE_DIR}/include)
ADD_SUBDIRECTORY(${LIB_HOUGFX_SOURCE_DIR})

SET(LIB_HOUAL houal)
SET(LIB_HOUAL_SOURCE_DIR ${HOU_SOURCE_DIR}/houal)
SET(LIB_HOUAL_INCLUDE_DIR ${LIB_HOUAL_SOURCE_DIR}/include)
ADD_SUBDIRECTORY(${LIB_HOUAL_SOURCE_DIR})

SET(LIB_HOUAUD houaud)
SET(LIB_HOUAUD_SOURCE_DIR ${HOU_SOURCE_DIR}/houaud)
SET(LIB_HOUAUD_INCLUDE_DIR ${LIB_HOUAUD_SOURCE_DIR}/include)
ADD_SUBDIRECTORY(${LIB_HOUAUD_SOURCE_DIR})

IF(HOU_CFG_BUILD_DEMOS)
  SET(EXE_EXAMPLES_SOURCE_DIR ${HOU_SOURCE_DIR}/demo)
  ADD_SUBDIRECTORY(${EXE_EXAMPLES_SOURCE_DIR})
ENDIF()

MESSAGE(STATUS "")
