CMAKE_MINIMUM_REQUIRED(VERSION 3.3)
MESSAGE(STATUS "--- Configuring target ${LIB_GLAD} ---")



# Options



# Output dir
SET(LIB_GLAD_OUTPUT_DIR ${CMAKE_BINARY_DIR})
MESSAGE(STATUS "Output dir: ${LIB_GLAD_OUTPUT_DIR}")



# Include directories
INCLUDE_DIRECTORIES(${LIB_GLAD_INCLUDE_DIR})



# Source files
SET(LIB_GLAD_SRC
  src/glad/glad.c
  src/glad/glad_wgl.c
)



# Linked libraries



# Compile flags
SET(LIB_GLAD_FLAGS "${COMPILER_FLAGS_BASIC}")


# Add targets
ADD_LIBRARY(${LIB_GLAD} SHARED ${LIB_GLAD_SRC})

# It is necessary to define the export symbols like this, or MSVC can't link.
TARGET_COMPILE_DEFINITIONS(${LIB_GLAD}
  PUBLIC GLAD_GLAPI_EXPORT
  PRIVATE GLAD_GLAPI_EXPORT_BUILD)

SET_TARGET_PROPERTIES(${LIB_GLAD} PROPERTIES
  ARCHIVE_OUTPUT_DIRECTORY ${LIB_GLAD_OUTPUT_DIR}
  LIBRARY_OUTPUT_DIRECTORY ${LIB_GLAD_OUTPUT_DIR}
  RUNTIME_OUTPUT_DIRECTORY ${LIB_GLAD_OUTPUT_DIR}
)

MESSAGE(STATUS "")

