CMAKE_MINIMUM_REQUIRED(VERSION 3.3)

# Include directories
INCLUDE_DIRECTORIES(${LIB_GLAD_INCLUDE_DIR})

# Source files
SET(LIB_GLAD_SRC
  src/glad/glad.c
)

IF(EMSCRIPTEN)
  SET(LIB_GLAD_SRC
    ${LIB_GLAD_SRC}
    src/glad/glad_egl.c
  )
ELSEIF(WIN32)
  SET(LIB_GLAD_SRC
    ${LIB_GLAD_SRC}
    src/glad/glad_wgl.c
  )
ELSEIF(UNIX)
  SET(LIB_GLAD_SRC
    ${LIB_GLAD_SRC}
    src/glad/glad_glx.c
  )
ENDIF()

# Add targets
IF(HOU_CFG_BUILD_STATIC_LIBS)
  ADD_LIBRARY(${LIB_GLAD} STATIC ${LIB_GLAD_SRC})
ELSE()
  ADD_LIBRARY(${LIB_GLAD} SHARED ${LIB_GLAD_SRC})
ENDIF()

IF(NOT HOU_CFG_BUILD_STATIC_LIBS)
  # It is necessary to define the export symbols like this, or MSVC can't link.
  TARGET_COMPILE_DEFINITIONS(${LIB_GLAD}
    PUBLIC GLAD_GLAPI_EXPORT
    PRIVATE GLAD_GLAPI_EXPORT_BUILD)
ELSE()
  TARGET_LINK_LIBRARIES(${LIB_GLAD} dl)
ENDIF()
