CMAKE_MINIMUM_REQUIRED(VERSION 3.3)
MESSAGE(STATUS "--- Configuring target ${LIB_SOIL} ---")

# Include directories
INCLUDE_DIRECTORIES(${LIB_SOIL_INCLUDE_DIR}/soil)

# Source files
SET(LIB_SOIL_SRC
  src/soil/image_DXT.c
  src/soil/image_helper.c
  src/soil/stb_image_aug.c
  src/soil/SOIL.c
)

# Linked libraries
SET(LIB_SOIL_LIB
  ${OPENGL_LIBRARIES}
)
MESSAGE(STATUS "Linked libs: ${LIB_SOIL_LIB}")

# Compile flags
SET(LIB_SOIL_FLAGS "${COMPILER_FLAGS_BASIC}")
IF(MINGW OR GCC)
  SET(LIB_SOIL_FLAGS "${LIB_SOIL_FLAGS} -w")
ELSEIF(MSVC)
  SET(LIB_SOIL_FLAGS "${LIB_SOIL_FLAGS} /wd4244 /wd4018 /wd4996 /wd4267")
ENDIF()

IF(UNIX)
  SET(LIB_SOIL_FLAGS "${LIB_SOIL_FLAGS} -fPIC")
ENDIF()

# Add targets
ADD_LIBRARY(${LIB_SOIL} STATIC ${LIB_SOIL_SRC})
SET_TARGET_PROPERTIES(${LIB_SOIL} PROPERTIES
  COMPILE_FLAGS ${LIB_SOIL_FLAGS}
)
TARGET_LINK_LIBRARIES(${LIB_SOIL} ${LIB_SOIL_LIB})

MESSAGE(STATUS "")
