CMAKE_MINIMUM_REQUIRED(VERSION 3.3)
MESSAGE(STATUS "--- Configuring demos ---")

# Find OpenAL
FIND_PACKAGE(OpenAL REQUIRED)

# Definitions
GET_PROPERTY(EXE_DEMO_DEFINITIONS
  DIRECTORY ${CURRENT_SOURCE_DIR}
  PROPERTY COMPILE_DEFINITIONS
)
MESSAGE(STATUS "Definitions: ${EXE_DEMO_DEFINITIONS}")

# Include directories.
INCLUDE_DIRECTORIES(
  ${LIB_HOUAUD_INCLUDE_DIR}
  ${LIB_HOUAL_INCLUDE_DIR}
  ${LIB_HOUGFX_INCLUDE_DIR}
  ${LIB_HOUGL_INCLUDE_DIR}
  ${LIB_HOUSYS_INCLUDE_DIR}
  ${LIB_HOUMTH_INCLUDE_DIR}
  ${LIB_HOUCOR_INCLUDE_DIR}
  ${LIB_OPENAL_INCLUDE_DIR}
  ${LIB_SDL2_INCLUDE_DIR}
  ${LIB_GLAD_INCLUDE_DIR}
  ${EXE_DEMO_SOURCE_DIR}
)
GET_PROPERTY(EXE_DEMO_INCLUDE_DIRS
  DIRECTORY ${CURRENT_SOURCE_DIR}
  PROPERTY INCLUDE_DIRECTORIES
)

# Linked libraries.
SET(EXE_DEMO_LIB
  ${LIB_HOUAUD}
  ${LIB_HOUAL}
  ${LIB_OPENAL}
  ${LIB_HOUGFX}
  ${LIB_HOUGL}
  ${LIB_GLAD}
  ${OPENGL_LIBRARIES}
  ${LIB_HOUSYS}
  ${LIB_HOUMTH}
  ${LIB_HOUCOR}
)
MESSAGE(STATUS "Linked libs: ${EXE_DEMO_LIB}")

# Executables
SET(EXE_DISPLAY_DEMO display-demo)
ADD_EXECUTABLE(${EXE_DISPLAY_DEMO} src/display_demo.cpp)
SET_TARGET_PROPERTIES(${EXE_DISPLAY_DEMO} PROPERTIES
  COMPILE_FLAGS ${EXE_HOU_TEST_FLAGS}
)
TARGET_LINK_LIBRARIES(${EXE_DISPLAY_DEMO} ${EXE_DEMO_LIB})

SET(EXE_WINDOW_DEMO window-demo)
ADD_EXECUTABLE(${EXE_WINDOW_DEMO} src/window_demo.cpp)
SET_TARGET_PROPERTIES(${EXE_WINDOW_DEMO} PROPERTIES
  COMPILE_FLAGS ${EXE_HOU_TEST_FLAGS}
)
TARGET_LINK_LIBRARIES(${EXE_WINDOW_DEMO} ${EXE_DEMO_LIB})

SET(EXE_WINDOW_DEMO event-demo)
ADD_EXECUTABLE(${EXE_WINDOW_DEMO} src/event_demo.cpp)
SET_TARGET_PROPERTIES(${EXE_WINDOW_DEMO} PROPERTIES
  COMPILE_FLAGS ${EXE_HOU_TEST_FLAGS}
)
TARGET_LINK_LIBRARIES(${EXE_WINDOW_DEMO} ${EXE_DEMO_LIB})

SET(EXE_WINDOW_DEMO keyboard-demo)
ADD_EXECUTABLE(${EXE_WINDOW_DEMO} src/keyboard_demo.cpp)
SET_TARGET_PROPERTIES(${EXE_WINDOW_DEMO} PROPERTIES
  COMPILE_FLAGS ${EXE_HOU_TEST_FLAGS}
)
TARGET_LINK_LIBRARIES(${EXE_WINDOW_DEMO} ${EXE_DEMO_LIB})

SET(EXE_WINDOW_DEMO mouse-demo)
ADD_EXECUTABLE(${EXE_WINDOW_DEMO} src/mouse_demo.cpp)
SET_TARGET_PROPERTIES(${EXE_WINDOW_DEMO} PROPERTIES
  COMPILE_FLAGS ${EXE_HOU_TEST_FLAGS}
)
TARGET_LINK_LIBRARIES(${EXE_WINDOW_DEMO} ${EXE_DEMO_LIB})

SET(EXE_AUDIO_DEMO mesh-rendering-demo)
ADD_EXECUTABLE(${EXE_AUDIO_DEMO} src/mesh_rendering_demo.cpp)
SET_TARGET_PROPERTIES(${EXE_AUDIO_DEMO} PROPERTIES
  COMPILE_FLAGS ${EXE_HOU_TEST_FLAGS}
)
TARGET_LINK_LIBRARIES(${EXE_AUDIO_DEMO} ${EXE_DEMO_LIB})

SET(EXE_AUDIO_DEMO audio-demo)
ADD_EXECUTABLE(${EXE_AUDIO_DEMO} src/audio_demo.cpp)
SET_TARGET_PROPERTIES(${EXE_AUDIO_DEMO} PROPERTIES
  COMPILE_FLAGS ${EXE_HOU_TEST_FLAGS}
)
TARGET_LINK_LIBRARIES(${EXE_AUDIO_DEMO} ${EXE_DEMO_LIB})

# SET(EXE_INPUT_DEMO input-demo)
# ADD_EXECUTABLE(${EXE_INPUT_DEMO} src/input_demo.cpp)
# SET_TARGET_PROPERTIES(${EXE_INPUT_DEMO} PROPERTIES
#   COMPILE_FLAGS ${EXE_HOU_TEST_FLAGS}
# )
# TARGET_LINK_LIBRARIES(${EXE_INPUT_DEMO} ${EXE_DEMO_LIB})
# 
# SET(EXE_RENDERING_DEMO rendering-demo)
# ADD_EXECUTABLE(${EXE_RENDERING_DEMO} src/rendering_demo.cpp)
# SET_TARGET_PROPERTIES(${EXE_RENDERING_DEMO} PROPERTIES
#   COMPILE_FLAGS ${EXE_HOU_TEST_FLAGS}
# )
# TARGET_LINK_LIBRARIES(${EXE_RENDERING_DEMO} ${EXE_DEMO_LIB})
# 
# SET(EXE_TEXT_RENDERING_DEMO text-rendering-demo)
# ADD_EXECUTABLE(${EXE_TEXT_RENDERING_DEMO} src/text_rendering_demo.cpp)
# SET_TARGET_PROPERTIES(${EXE_TEXT_RENDERING_DEMO} PROPERTIES
#   COMPILE_FLAGS ${EXE_HOU_TEST_FLAGS}
# )
# TARGET_LINK_LIBRARIES(${EXE_TEXT_RENDERING_DEMO} ${EXE_DEMO_LIB})

# Copy demo files.
ADD_CUSTOM_COMMAND(
  TARGET ${EXE_DISPLAY_DEMO} POST_BUILD
  COMMAND ${CMAKE_COMMAND} -E copy_directory
  ${CMAKE_CURRENT_SOURCE_DIR}/data
  ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/source/demo/data
  COMMENT "Copying demo data directory to build folder"
)

MESSAGE(STATUS "")
